Methodik-Abschnitt grau hinterlegt

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <p>Die Öffnung der Transportdaten der SBB hat zum Beispiel viele Pendler dazu inspiriert, ihren Fahrplan <a href="https://opentransportdata.swiss/de/fallblatt">kreativ neu zu interpretieren</a>. Aber auch Unternehmen machen dem <a href="http://www.viadi-app.ch">SBB-Fahrplan Konkurrenz</a>. Das innovative Interface von <a href="https://www.viadi-app.ch/">Viadi</a> fand schliesslich sogar Einzug in die neue SBB-App.</p>
 <p>Doch während viele Leute in Bahnhof, Migros oder Coop fast täglich ein und ausgehen, trifft das bei der Verwaltung nicht zu.</p>
 <p>Lovato wünscht sich deshalb auch dort mehr Offenheit. Die Verwaltungen kennen ihre Fragestellungen und oftmals gleichen sie sich untereinander. Offene Daten können ein Anlass sein, darüber zu diskutieren, ob man die Herausforderungen nicht gemeinsam angehen will, anstatt jeder für sich in seiner Ecke<a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a> <a href="#fn3" class="footnoteRef" id="fnref3"><sup>3</sup></a>. Bis sich eine solche Kultur des &quot;Open Government&quot; etabliert hat, wird es <a href="https://www.egovernment.ch/index.php/download_file/force/1135/3337/">wohl noch einige Jahre dauern</a>. Aber, so Lovato: &quot;die Zeit ist auf unserer Seite. Irgendwann wird der Zugang zu Daten so selbstverständlich sein wie der zu Wasser oder zu Strom.&quot;</p>
+<div markdown="1" style="background-color: #D9D9D6; padding: 5px 30px; box-sizing: border-box">
 <h3 id="methodik">Methodik</h3>
 <p>Informationen zu den einzelnen Datensätzen wurden über die <a href="https://opendata.swiss/api/3/action/package_list">opendata.swiss-API</a> abgefragt.</p>
 <p>Um die Dateigrösse und die Anzahl der Einträge zu ermitteln wurden alle Daten heruntergeladen. Davon ausgenommen sind Datensätze die als API zur Verfügung stehen oder nicht direkt verlinkt sind. Zur Ermittlung der Dateigrösse wurden die Grössen aller Downloads addiert.</p>
@@ -62,6 +63,7 @@
 <li>Bildaten: Anzahl der Bilder</li>
 </ul>
 <p>Die Besucherzahlen wurden freundlicherweise vom <a href="https://www.bar.admin.ch/bar/de/home/recherche/suchen/suchmaschinen-portale/open-government-data.html">Bundesarchiv</a> zur Verfügung gestellt. Die Besucherzahlen für einen Datensatz wurden ermittelt, indem die Anzahl Besucher auf der Seite des Datensatzes und auf allen Unterseiten kumuliert wurde.</p>
+</div>
 <h3 id="fussnoten">Fussnoten</h3>
 <script src="presentation/presentation.js"></script>
 <div class="footnotes">
