Autor und Betreuer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <h1 id="the-hitchhikers-guide-to-swiss-open-government-data">The hitchhiker’s guide to Swiss Open Government Data</h1>
-<p>Jonas Oesch</p>
+<ul>
+<li>Jonas Oesch (jonas.oesch@fhnw.ch)</li>
+<li>Betreuer: Prof. Dr. Simon Schubiger</li>
+</ul>
+<p><a href="https://www.fhnw.ch/de/die-fhnw/hochschulen/ht/institute/institut-fuer-4d-technologien">i4Ds</a>, <a href="https://www.fhnw.ch/de">FHNW</a></p>
 <p><em>Die Öffnung der Behördendaten wird oft als deren &quot;Befreiung&quot; bezeichnet. Man könnte sie aber auch als &quot;Entkleidung&quot; sehen. Ohne den ursprünglichen Kontext präsentieren sich die nackten Zahlen als ein Haufen Antworten ohne die passenden Fragen. Wie man alte Daten neu einkleidet, darauf sucht die Open Data-Community gerade die Antwort</em></p>
 <h2 id="die-forderung-nach-mehr-transparenz-und-demokratie">Die Forderung nach mehr Transparenz und Demokratie</h2>
 <p>Die Öffnung der Behördendaten hat in der Schweiz schon eine längere Geschichte. Als späte Folge des Fichenskandals in den 90er Jahren erliess der Bund 2006 ein <a href="https://www.admin.ch/opc/de/classified-compilation/20022540/index.html">Gesetz</a>, das die Bundesbehörden dazu verpflichtet, auf Anfrage fast alle ihrer Informationen herauszugeben.</p>
